--- a/index.html
+++ b/index.html
@@ -5,24 +5,34 @@
     <link rel="stylesheet" href="./styles.css">
     <title>RPG - Dragon Repeller</title>
   </head>
-  <body>
+  <body></body>
     <div id="game">
+      <!-- Player stats section -->
       <div id="stats">
         <span class="stat">XP: <strong><span id="xpText">0</span></strong></span>
         <span class="stat">Health: <strong><span id="healthText">100</span></strong></span>
         <span class="stat">Gold: <strong><span id="goldText">50</span></strong></span>
       </div>
+      <!-- Button controls for navigating the game -->
       <div id="controls">
         <button id="button1">Go to store</button>
-        <button id="button2">Go to cave</button>
-        <button id="button3">Fight dragon</button>
+        <button id="button2">Go to forest</button>
+        <button id="button3">Fight boss</button>
+        <button id="button4">Check Inventory</button>
       </div>
+      <!-- Monster stats (hidden by default) -->
       <div id="monsterStats">
         <span class="stat">Monster Name: <strong><span id="monsterName"></span></strong></span>
         <span class="stat">Health: <strong><span id="monsterHealth"></span></strong></span>
       </div>
-      <div id="text">
-        Welcome to Dragon Repeller. You must defeat the dragon that is preventing people from leaving the town. You are in the town square. Where do you want to go? Use the buttons above.
+    <!-- Text area for displaying game narration -->
+        <div id="text">
+          Welcome to Salamander RPG!
+        </div>
+        <!--Next button (hidden by default)-->
+        <button id="nextButton">Next</button>
+      <div id="displayedImage">
+        <img id="currentImage" src="images/character/salamander.png">
       </div>
     </div>
     <script src="./script.js"></script>
